--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <a href="#" >Login</a>
             </div>
             <nav>
-               <div href="#" class="hamburger">
+               <div class="hamburger">
                   <div class="line"></div>
                   <div class="line"></div>
                   <div class="line"></div>
